--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "mongoose": "^6.2.0",
     "reflect-metadata": "^0.1.13",
