--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "passport": "^0.5.2",
@@ -61,7 +62,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.5.5"
   },
   "jest": {
     "moduleFileExtensions": [
